# orchestra-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  orchestra-agent.toml  private-readme.md  pyproject.toml  基本設計.md
.github/workflows/: ci.yml
docker/: README.md
docker/mcp-excel-server/: Dockerfile  README.md  config.example.toml  config.example.yaml  docker-compose.yml
docker/mcp-files-server/: Dockerfile  README.md  config.example.toml  config.example.yaml  docker-compose.yml
docs/: current-status.md  llm-step-runtime.md  operations.md  workspace-artifacts.md
src/orchestra_agent/: __init__.py  cli.py  control_plane.py  control_plane_inspector.py  observability.py  runtime.py
src/orchestra_agent/adapters/: __init__.py
src/orchestra_agent/api/: __init__.py  approval_api.py  run_api.py  workflow_api.py
src/orchestra_agent/application/: __init__.py
src/orchestra_agent/config/: __init__.py  app_config.py
src/orchestra_agent/domain/: __init__.py  agent_state.py  enums.py  errors.py  execution_record.py  serialization.py  step.py  step_plan.py  workflow.py
src/orchestra_agent/executor/: __init__.py  failure_handler.py  plan_executor.py
src/orchestra_agent/mcp_server/: __init__.py  __main__.py  excel_config.py  excel_service.py  file_config.py  file_graph_client.py  file_service.py  jsonrpc_server.py  logging_utils.py  server.py
src/orchestra_agent/ports/: __init__.py  agent_state_store.py  audit_logger.py  llm_client.py  mcp_client.py  planner.py  policy_engine.py  snapshot_manager.py  step_executor.py  step_plan_repository.py  workflow_repository.py
src/orchestra_agent/runtime_support/: __init__.py  factories.py  llm_provider_plugins.py  models.py  pathing.py
src/orchestra_agent/shared/: __init__.py  error_handling.py  llm_json.py  llm_prompting.py  (+4 more)
tests/: test_import.py
tests/integration/: test_excel_workflow_api.py  test_http_product_flow.py  test_main_cli.py
tests/unit/: test_app_config.py  test_cli_error_handling.py  test_cli_feedback_output.py  test_cli_llm_provider.py  test_cli_parser.py  test_control_plane_inspector.py  test_control_plane_yes_no.py  test_observability.py  test_runtime_support.py
(+58 files in other folders)
