[project]
name = "orchestra-agent"
version = "0.1.0"
description = "Config-driven, human-in-the-loop automation orchestration product built on AI planning and MCP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
]

[project.scripts]
orchestra-agent = "orchestra_agent.cli:main"
orchestra-agent-api = "orchestra_agent.control_plane:main"
orchestra-agent-mcp = "orchestra_agent.mcp_server.__main__:main"

[project.optional-dependencies]
mcp-server = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra_agent"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_unimported = true
ignore_missing_imports = false
exclude = "(^pytest-cache-files-.*$)|(^\\.pytest_cache.*$)|(^\\.tmp.*$)|(^\\.uv-.*$)|(^\\.venv.*$)"

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true
